# resource-families-html-generator

./: .csv_structure.csv.swp  .gitignore  .travis.yml  Academic corpora.html  CHANGELOG.md  Computer-mediated communication corpora.html  Conceptual resources.html  Corpus query tools.html  Dictionaries.html  Glossaries.html  Historical corpora.html  L2 learner corpora.html  Language models.html  Legal corpora.html  Lexica.html  Literary corpora.html  Manually annotated corpora.html  Multimodal corpora.html  Named entity recognition.html  Newspaper corpora.html  Normalization.html  Oral history corpora.html  Parallel corpora.html  Parliamentary corpora.html  Part-of-speech tagging and lemmatization.html  README.md  Referenca corpora.html  Reference corpora.html  Sign language resources.html  Spoken corpora.html  Tools for sentiment analysis.html  Wordlists.html  clartable.py  csv_structure.csv  deploy-to-gh-pages.sh  deploy.sh  generate-tables.sh  literary-corpora.csv  pyproject.toml  reader.py  (+9 more)
Academic corpora/: Academic corpora.html
Dictionaries/: Dictionaries.html
Disordered speech corpora/: Disordered speech corpora.html
Historical corpora/: Historical corpora.html
L2 learner corpora/: L2 learner corpora.html
Legal corpora/: Legal corpora.html
Lexica/: Lexica.html
Literary corpora/: Literary corpora.html
Manually annotated corpora/: Manually annotated corpora.html
Oral history corpora/: Oral history corpora.html
Parallel corpora/: Parallel corpora.html
Reference corpora/: Reference corpora.html
Spoken corpora/: Spoken corpora.html
(+277 files in other folders)
