[tool.poetry]
name = "resource_families_html_generator"
description = "CLARIN presentation layer generator for Resource Families"
version = "1.0.1"
license = "./LICENSE.txt"
authors = [
    "Michał Gawor <michal@clarin.eu>",
    "Alexander König <alex@clarin.eu>",
]
maintainers = [
    "Michał Gawor <michal@clarin.eu>",
    "Alexander König <alex@clarin.eu>",
]
packages = [
    { include = "rfhg" },
]
include = [
    "rfhg/static/*",
]

[tool.poetry.dependencies]
json5 = '0.9.14'
numpy = '1.26.2'
pandas = '2.1.3'
python = "^3.12"
python-dateutil = '2.8.2'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
